tests/output_contracts/snapshots/output_contracts__json_output__ready_json_output.snap
---
source: tests/output_contracts/json_output.rs
assertion_line: 143
expression: normalize_json(&json)
---
[
  {
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "labels": [],
    "priority": 2,
    "status": "open",
    "title": "Ready issue",
    "updated_at": "TIMESTAMP"
  }
]
