tests/output_contracts/snapshots/output_contracts__json_output__ready_representative_json_output.snap
---
source: tests/output_contracts/json_output.rs
assertion_line: 809
expression: output.stdout.trim_end()
---
{"issues":[{"created_at":"2026-02-01T00:00:00Z","created_by":"fixture","description":"Unblocks dependent work","id":"bd-blocker","issue_type":"task","labels":["core"],"priority":0,"status":"open","title":"00 Blocking Root","updated_at":"2026-02-01T00:00:00Z"},{"created_at":"2026-02-02T00:00:00Z","created_by":"fixture","id":"bd-ready-p0","issue_type":"bug","labels":["agent","ops"],"priority":0,"status":"open","title":"01 Ready Critical Unassigned","updated_at":"2026-02-02T00:00:00Z"},{"created_at":"2026-02-03T00:00:00Z","created_by":"fixture","id":"bd-ready-p1-assigned","issue_type":"feature","labels":["frontend"],"owner":"owner@example.com","priority":1,"status":"open","title":"02 Ready Assigned Feature","updated_at":"2026-02-03T00:00:00Z"},{"created_at":"2026-02-06T00:00:00Z","created_by":"fixture","id":"bd-deferred","issue_type":"task","labels":["waiting"],"priority":1,"status":"deferred","title":"05 Deferred Ready Later","updated_at":"2026-02-06T00:00:00Z"},{"created_at":"2026-02-04T00:00:00Z","created_by":"fixture","id":"bd-ready-p2-label","issue_type":"task","labels":["backend"],"priority":2,"status":"open","title":"03 Ready Backend Task","updated_at":"2026-02-04T00:00:00Z"}],"total":5,"limit":0,"offset":0,"has_more":false}
