tests/output_contracts/snapshots/output_contracts__json_output__ready_truncated_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "issues": [
    {
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "id": "ISSUE_ID",
      "issue_type": "task",
      "labels": [],
      "priority": 2,
      "status": "open",
      "title": "Ready one",
      "updated_at": "TIMESTAMP"
    }
  ],
  "total": 3,
  "limit": 1,
  "offset": 0,
  "has_more": true
}
