tests/output_contracts/snapshots/output_contracts__json_output__representative_list_json_output.snap
---
source: tests/output_contracts/json_output.rs
assertion_line: 96
expression: output.stdout.trim_end()
---
{"issues":[{"id":"bd-golden-parent","title":"01 Parent Epic","description":"Parent description","status":"open","priority":1,"issue_type":"epic","owner":"owner@example.com","created_at":"2026-01-01T00:00:00Z","created_by":"fixture","updated_at":"2026-01-01T00:00:00Z","source_repo":".","labels":["ops","ux"],"dependency_count":0,"dependent_count":1},{"id":"bd-golden-child","title":"02 Child Task","description":"Child description","design":"Design notes","acceptance_criteria":"Acceptance text","notes":"Operator notes","status":"in_progress","priority":2,"issue_type":"task","owner":"child@example.com","created_at":"2026-01-02T00:00:00Z","created_by":"fixture","updated_at":"2026-01-02T01:00:00Z","defer_until":"2026-07-03T00:00:00Z","source_repo":".","labels":["backend"],"dependency_count":1,"dependent_count":0},{"id":"bd-golden-closed","title":"03 Closed Bug","description":"Closed bug description","status":"closed","priority":0,"issue_type":"bug","owner":"owner@example.com","created_at":"2026-01-03T00:00:00Z","created_by":"fixture","updated_at":"2026-01-03T03:00:00Z","closed_at":"2026-01-03T03:00:00Z","close_reason":"fixed","source_repo":".","labels":["bugfix"],"dependency_count":0,"dependent_count":0}],"total":3,"limit":0,"offset":0,"has_more":false}
