tests/output_contracts/snapshots/output_contracts__json_output__search_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "id": "ISSUE_ID",
    "title": "Search target",
    "status": "open",
    "priority": 2,
    "issue_type": "task",
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "updated_at": "TIMESTAMP",
    "source_repo": "SOURCE_REPO",
    "compaction_level": 0,
    "original_size": 0,
    "dependency_count": 0,
    "dependent_count": 0
  }
]
