tests/output_contracts/snapshots/output_contracts__json_output__search_no_match_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "issues": [],
  "total": 0,
  "limit": 50,
  "offset": 0,
  "has_more": false
}
