tests/output_contracts/snapshots/output_contracts__json_output__search_truncated_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "issues": [
    {
      "id": "ISSUE_ID",
      "title": "Target three",
      "status": "open",
      "priority": 2,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "compaction_level": 0,
      "original_size": 0,
      "dependency_count": 0,
      "dependent_count": 0
    }
  ],
  "total": 3,
  "limit": 1,
  "offset": 0,
  "has_more": true
}
