tests/output_contracts/snapshots/output_contracts__json_output__stale_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "created_at": "TIMESTAMP",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 2,
    "status": "open",
    "title": "Stale issue",
    "updated_at": "TIMESTAMP"
  }
]
